2011-07-04  Andras Becsi  <abecsi@webkit.org>

        [Qt] http/tests/inspector/network-preflight-options.html fails frequently
        https://bugs.webkit.org/show_bug.cgi?id=63910

        Unreviewed.

        * platform/qt/Skipped: Skip http/tests/inspector/network-preflight-options.html.

2011-07-04  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Resources loaded to Resources Panel from InspectorPageAgent do not have mime type set.
        https://bugs.webkit.org/show_bug.cgi?id=63701

        Added a test that checks mime type when resources are loaded from cache by InspectorPageAgent.

        Reviewed by Yury Semikhatsky.

        * http/tests/inspector/resource-tree/resource-tree-mimetype-expected.txt: Added.
        * http/tests/inspector/resource-tree/resource-tree-mimetype.html: Added.
        * http/tests/inspector/resource-tree/resources/empty.png: Added.

2011-07-04  Marcus Bulach  <bulach@chromium.org>

        [chromium] Updates expectations for failures on svg/animations/svgtransform-animation-1.html
        https://bugs.webkit.org/show_bug.cgi?id=63902

        Unreviewed expectations fix.

        * platform/chromium/test_expectations.txt:

2011-07-04  Marcus Bulach  <bulach@chromium.org>

        [chromium] Rebaseline following r90338
        https://bugs.webkit.org/show_bug.cgi?id=63896

        Unreviewed rebaseline.

        * platform/chromium-linux/plugins/mouse-click-plugin-clears-selection-expected.png: Added.
        * platform/chromium-mac/plugins/mouse-click-plugin-clears-selection-expected.png: Added.
        * platform/chromium-mac/plugins/mouse-click-plugin-clears-selection-expected.txt: Added.
        * platform/chromium-win-vista/plugins/mouse-click-plugin-clears-selection-expected.png: Added.

2011-07-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [Extensions API] audit formatter names should begin with create