@@ -482,10 +482,6 @@ http/tests/xmlhttprequest/workers/shared-worker-close.html
 
 transitions/change-values-during-transition.html
 
-# [Qt] http/tests/inspector/network-preflight-options.html fails frequently
-# https://bugs.webkit.org/show_bug.cgi?id=63910
-http/tests/inspector/network-preflight-options.html
-
 # http/tests/inspector/resource-har-conversion.html is failing on the release bot after r63191
 # webkit.org/b/42162
 http/tests/inspector/resource-har-conversion.html
